# cuda-ai-opt

./: .clang‑format  .gitignore  CMakeLists.txt  README.md
Applications/BenchmarkRunner/: CMakeLists.txt  main.cpp
Applications/CuTensorGemm/: CMakeLists.txt  main.cu
Applications/DeviceInfo/: CMakeLists.txt  main.cpp
Docs/: Bayesian.md  GeneticAlgorithm.md  InferenceEngine.md  KernelDesign.md  NAS.md  RLSimulator.md  SparseMatrix.md
Libraries/InferenceEngine/: CMakeLists.txt
Libraries/InferenceEngine/src/: Engine.cpp  Engine.hpp
Libraries/InferenceEngine/src/Kernels/: Add.cu  Add.cuh  Conv2d.cu  Conv2d.cuh  CudaUtils.cu  CudaUtils.cuh  DeviceUtils.cuh  Flatten.cu  Flatten.cuh  Gemm.cu  Gemm.cuh  GlobalAveragePool.cu  GlobalAveragePool.cuh  MaxPool.cu  MaxPool.cuh  Relu.cu  Relu.cuh  Softmax.cu  Softmax.cuh  Timing_utils.cuh
Libraries/InferenceEngine/src/Layers/: AddLayer.cpp  AddLayer.hpp  ConvLayer.cpp  ConvLayer.hpp  FlattenLayer.cpp  FlattenLayer.hpp  GemmLayer.cpp  GemmLayer.hpp  GlobalAveragePoolLayer.cpp  GlobalAveragePoolLayer.hpp  Layer.hpp  MaxPoolLayer.cpp  MaxPoolLayer.hpp  ReluLayer.cpp  ReluLayer.hpp  SoftmaxLayer.cpp  SoftmaxLayer.hpp
Libraries/InferenceEngine/src/Utils/: LayerConfig.hpp  NpyLoader.cpp  NpyLoader.hpp  OnnxParser.cpp  OnnxParser.hpp  Tensor.cpp  Tensor.hpp
Libraries/Tests/: CMakeLists.txt  InferenceEngineTest.cpp
Models/: input.npy  latency.csv  output.npy  requirements.txt  resnet18.dot  resnet18.ipynb
